plugins {
    id 'java'
}
allprojects {

    group "org.lee"
    version '1.0.0'
    sourceCompatibility = 17
    targetCompatibility = 17
// 业务代码字符集，这个是指定源码解析的字符集[编译器]
    compileJava.options.encoding = "UTF-8"
// 测试代码字符集，这个是指定源码解析的字符集[编译器]
    compileTestJava.options.encoding = "UTF-8"
// 编译java文件时采用的UTF-8， 注意这是指定源码编码的字符集【源文件】
    tasks.withType(JavaCompile) {
        options.encoding = 'UTF-8'
    }
// 文档【源文件】
    tasks.withType(Javadoc) {
        options.encoding = 'UTF-8'
    }
    //manifest
    jar{
        manifest{
            attributes("Implementation-Title":"Gradle","Implementtation-Version":archiveVersion)
        }
    }


    repositories {
        maven { url 'https://maven.aliyun.com/repository/public' }
        mavenCentral()
    }
}

configurations.all() {
    Configuration configuration ->
        {
            configuration.resolutionStrategy.failOnVersionConflict()
        }
}


ext.libraries = [

    arrow_verctor: dependencies.create("org.apache.arrow:arrow-vector:${arrowVersion}") ,
    arrow_core: "org.apache.arrow:arrow-memory-core:${arrowVersion}" ,
    arrow_memory_netty: "org.apache.arrow:arrow-memory-netty:${arrowVersion}" ,
    arrow_flight: "org.apache.arrow:flight-core:${arrowVersion}" ,
    arrow_plasma: "org.apache.arrow:arrow-plasma :${arrowVersion}"
]